--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span class="text-wrapper"><br /></span>
                         <span style="color: #428cca;">ІЯК</span>
                         <span style="color: #ffffff;">
-                            - інженерний ярмарок кар’єри, масштабна виставка компаній, що забезпечує студентам можливість самопрезентації, комунікації з роботодавцями та розвиток професійних навичок, шляхом відвідування лекцій та воркшопів від експертів у різних галузях та інноваційний формат, який за цієї картини має розцвісти наповну.
+                            - інженерний ярмарок кар’єри, масштабна виставка компаній. Івент забезпечує студентам можливість самопрезентації, комунікації з роботодавцями та розвиток професійних навичок, шляхом відвідування лекцій та воркшопів від експертів у різних галузях та інноваційний формат, який за цієї картини має розцвісти наповну.
                             <br />
                         </span>
                         <h1 style="color: #428cca;
@@ -131,13 +131,13 @@ font-size: 1.25em;">Що я знаю про ІЯК?</h2>
             z-index: 999;">Що по скілах на посаду <p>IT Responsible?</p>
             </h2>
             <div class="scrollable-section">
-                <div class="content">
-                        <p>Найперше, що треба зробити це планування для ефективної кооперації з CR та DS responsible, адже від них залежатиме більшість подальших завдань.</p>
-                        <p>Отже, перша таска це брошура, вона розробляється за скриптом складеним CR responsible та дизайном безпосередньо DS responsible. </p>
-                        <p>Наступна це сайт ІЯКу з використанням React, Redux, TypeScript  / JavaScript. Також необхідно створити телеграм-бота(більше схильний робити це на python), із базами даних MongoDB чи SQL, а афішу для бота оформити через telegraph.</p>
-                        <p> Інші технічні завдання, як створення версталок, моніторинг бази даних, перевірка справності обладнання на івенті.</p>
-                        <p>Окрім цього, залученість в позатехнічних завданнях команди, наприклад, допомога на інфостійках для підвищення обізнаності студентів про подію і будь-які інші задачі, які потребуватимуть реалізації. Мета спільна, і я готовий допомагати в будь-яких напрямах, щоб досягти результату.</p>
-                        <p>КТ: брав КТ у Дениса Браздецького та домовився за ще одне з Микитою Клименком.</p>
+                <div class="content" style="font-size: 1.25em;">
+                        <p style="text-indent: 20px;">Найперше, що треба зробити це планування для ефективної кооперації з CR та DS responsible, адже від них залежатиме більшість подальших завдань.</p>
+                        <p style="text-indent: 20px;">Отже, перша таска це брошура, вона розробляється за скриптом складеним CR responsible та дизайном безпосередньо DS responsible. </p>
+                        <p style="text-indent: 20px;">Наступна це сайт ІЯКу з використанням React, Redux, TypeScript  / JavaScript. Також необхідно створити телеграм-бота(більше схильний робити це на python), із базами даних MongoDB чи SQL, а афішу для бота оформити через telegraph.</p>
+                        <p style="text-indent: 20px;"> Інші технічні завдання, як створення версталок, моніторинг бази даних, перевірка справності обладнання на івенті.</p>
+                        <p style="text-indent: 20px;">Окрім цього, залученість в позатехнічних завданнях команди, наприклад, допомога на інфостійках для підвищення обізнаності студентів про подію і будь-які інші задачі, які потребуватимуть реалізації. Мета спільна, і я готовий допомагати в будь-яких напрямах, щоб досягти результату.</p>
+                        <p style="text-indent: 20px;">КТ: брав КТ у Дениса Браздецького та домовився за ще одне з Микитою Клименком.</p>
                 </div>
             </div>
             <div class="scrollable-section" style="  left:780px; font-size: 1.5em;">
