--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@ font-size: 1.25em;">Що я знаю про ІЯК?</h2>
         </div> 
         </div>
     </section>
+    <section style="background-image: url(goo.jpg); top:20px;">
+        <div style="position:absolute;
+    margin: auto;
+    background: white;
+    border-radius: 50px;
+    width:70%;">
+    <div style="font-size: 2em;
+    font-weight: bold;
+    color: #333;
+    padding: 25px;">Наостанок хочу додати, що мій досвід, бажання розвиватися та готовність вкладати час і зусилля стануть корисними для кортіми ІЯКу.  Для мене неймовірним досягненням буде стати частиною цього масштабного, багаторічного івенту, віддаватися на всі 200% і допомагати створювати  справді неймовірний експіріенс.</div></div>
+   
+</section>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
